@@ -563,6 +563,7 @@ Major new features in this release
 All (GUI):
 
 - Fix crash in wxHTML on mal-formed <area> elements (LukasK).
+- Set correct cursor when the mouse is over image map links in wxHTML (LukasK).
 
 
 2.9.5: (released 2013-07-15)
